infra/k8s/apps/ticketing/overlays/prod/nats-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
