infra/k8s/apps/ticketing/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ticketing.dev
      secretName: ticketing-tls
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: client-gateway-srv
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
